--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.8.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "sockjs": "^0.3.24",
