--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-table": "^8.15.3",
     "@types/node": "^20.11.27",
     "class-variance-authority": "^0.7.0",
