--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20.11.27",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "firebase": "^10.10.0",
     "lucide-react": "^0.358.0",
