--- a/package.json
+++ b/package.json
@@ -46,7 +46,15 @@
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.2",
     "ws": "^8.16.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "mobx": "^6.10.0",
+    "mobx-react": "^9.0.0",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/joy": "^5.0.0-beta.20",
+    "react-colorful": "^5.6.1",
+    "formik": "^2.4.3",
+    "@mui/material": "^5.14.18",
+    "axios": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
