--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/joy": "^5.0.0-beta.20",
+    "@mui/material": "^5.14.18",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,13 +26,18 @@
     "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-table": "^8.15.3",
     "@types/node": "^20.11.27",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "firebase": "^10.10.0",
+    "formik": "^2.4.3",
     "lucide-react": "^0.358.0",
+    "mobx": "^6.10.0",
+    "mobx-react": "^9.0.0",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -48,14 +56,8 @@
     "web-vitals": "^3.5.2",
     "ws": "^8.16.0",
     "zod": "^3.22.4",
-    "mobx": "^6.10.0",
-    "mobx-react": "^9.0.0",
-    "@mui/icons-material": "^5.14.18",
-    "@mui/joy": "^5.0.0-beta.20",
-    "react-colorful": "^5.6.1",
-    "formik": "^2.4.3",
-    "@mui/material": "^5.14.18",
-    "axios": "^1.4.0"
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
@@ -71,6 +73,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
+    "sass": "^1.75.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
