--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.14.18",
     "@mui/joy": "^5.0.0-beta.20",
@@ -33,6 +35,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.10.0",
     "formik": "^2.4.3",
+    "global": "^4.4.0",
     "lucide-react": "^0.358.0",
     "mobx": "^6.10.0",
     "mobx-react": "^9.0.0",
@@ -55,9 +58,7 @@
     "uuid": "^9.0.1",
     "web-vitals": "^3.5.2",
     "ws": "^8.16.0",
-    "zod": "^3.22.4",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
